kubernetes-manifests/node-red.yml
# this is just a stub of a node-red service definition without an exposed port
# node-red is a nice piece of software that happens to be built on top of the worst
# possible software stack, plus the damn thing has no authentication out of the
# box (you need to enable it). We will therefore isolate it behind a proxy that does
# the authentication for us.
apiVersion: v1
kind: Service
metadata:
  name: node-red
  labels:
    app: node-red
spec:
  type: NodePort
  ports:
    # note that these ports aren't exposed to the outside world, just to the cluster
    - port: 1880
      protocol: TCP
      targetPort: 1880
      name: web
  selector:
    app: node-red
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-red
spec:
  # important: node-red is not a distributed application, so we can only have one
  # running replica at a time.
  replicas: 1
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
        - name: node-red
          # need to target the Raspberry PI compatible tag
          image: nodered/node-red-docker:rpi-v8
          imagePullPolicy: Always
          ports:
            - containerPort: 1880
              protocol: TCP
